# newspeak

./: .gitignore  README.md  hie.yaml  newspeak.cabal  newspeak.hs  stack.yaml
Newspeak/: Compiler.hs
